# debugwire

./: 1.c  bahi.txt  can.c  osc.c
librarytrial_proto/: CMakeLists.txt  vsomeip.json
librarytrial_proto/include/: i2c.hpp  vsomeipclient.hpp
librarytrial_proto/src/: i2c.cpp  vsomeipclient.cpp
librarytrial_proto/test/: main.cpp
test_example/: CMakeCache.txt  CMakeLists.txt  vsomeip.json
test_example/src/: service-example.cpp
